    (Sangjin Lee via jlowe)

    HADOOP-7817. RawLocalFileSystem.append() should give FSDataOutputStream
    with accurate .getPos() (kanaka kumar avvaru via vinayakumarb)

    HADOOP-12893. Verify LICENSE.txt and NOTICE.txt.
    (Xiao Chen and Andrew Wang via aajisaka)

    HADOOP-13297. Add missing dependency in setting
    maven-remote-resource-plugin to fix builds. (Sean Busbey via aajisaka)

Release 2.6.4 - 2016-02-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11252. RPC client does not time out by default.
    (Wilfred Spiegelenburg and Masatake Iwasaki via aajisaka)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12107. long running apps may have a huge number of StatisticsData
    instances under FileSystem (Sangjin Lee via Ming Ma)

    HADOOP-12706. TestLocalFsFCStatistics#testStatisticsThreadLocalDataCleanUp
    times out occasionally (Sangjin Lee and Colin Patrick McCabe via jlowe)

    HADOOP-12736. TestTimedOutTestsListener#testThreadDumpAndDeadlocks
    sometimes times out. (Xiao Chen via aajisaka)

Release 2.6.3 - 2015-12-17

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12230. hadoop-project declares duplicate, conflicting curator
    dependencies. (Rakesh R via aajisaka)

    HADOOP-9242. Duplicate surefire plugin config in hadoop-common.
    (Andrey Klochkov via suresh)

    HADOOP-10668. TestZKFailoverControllerStress#testExpireBackAndForth
    occasionally fails. (Ming Ma via cnauroth)

    HADOOP-11267. TestSecurityUtil fails when run with JDK8 because of empty
    principal names. (Stephen Chu via wheat9)

    HADOOP-10134 [JDK8] Fix Javadoc errors caused by incorrect or illegal tags in doc
    comments. (apurtell via stevel)